# hello-ocaml

./: dune-project  hello.opam  readme.md
lib/: .merlin  dune  lib.ml
test/: .merlin  dune  test.ml
